parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABSTRACT
    ADD
    AND
    ARRAY_CREATION
    ARRAY_DECLARATION
    AS
    BASE
    BOOL
    BREAK
    BYTE
    CASE
    CATCH
    CHAR
    CHECKED
    CLASS
    COMA
    CONST
    CONTINUE
    DCORCH
    DECIMAL
    DECREMENTO
    DEFAULT
    DELEGATE
    DICTIONARY
    DIFERENTE
    DIVIDIRIGUAL
    DLLAVE
    DO
    DOUBLE
    DYNAMIC
    ELSE
    ENUM
    EVENT
    EXTERN
    FALSE
    FINALLY
    FIXED
    FLECHALAMBDA
    FLOAT
    FOR
    FOREACH
    GENERICO_INVALIDO
    GET
    GOTO
    ICORCH
    IF
    IGUAL
    ILLAVE
    IN
    INCREMENTO
    INT
    INTERFACE
    INTERNAL
    IS
    LOCK
    LONG
    MASIGUAL
    MAYOR
    MAYORIGUAL
    MENOR
    MENORIGUAL
    MENOSIGUAL
    MODULO
    NAMESPACE
    NEW
    NOT
    NULL
    OBJECT
    OPERATOR
    OR
    OUT
    OVERRIDE
    PARAMS
    PARTIAL
    PORIGUAL
    PRIVATE
    PROTECTED
    PUBLIC
    PUNTO
    READONLY
    REF
    REMOVE
    RETURN
    SBYTE
    SEALED
    SET
    SHORT
    SIZEOF
    STACKALLOC
    STATIC
    STRING
    STRUCT
    SWITCH
    THIS
    THROW
    TRUE
    TRY
    TYPEOF
    UINT
    ULONG
    UNCHECKED
    UNSAFE
    USHORT
    USING
    VAR
    VAR_INVALIDO
    VIRTUAL
    VOID
    VOLATILE
    WHILE
    YIELD

Grammar

Rule 0     S' -> cuerpo
Rule 1     cuerpo -> linea
Rule 2     cuerpo -> linea cuerpo
Rule 3     linea -> expression SENTENCIAFIN
Rule 4     linea -> assignment SENTENCIAFIN
Rule 5     expression -> expression MAS term
Rule 6     expression -> expression MENOS term
Rule 7     expression -> term
Rule 8     term -> term POR factor
Rule 9     term -> term DIVIDIR factor
Rule 10    term -> factor
Rule 11    factor -> INT_LITERAL
Rule 12    factor -> FLOAT_LITERAL
Rule 13    factor -> IPAREN expression DPAREN
Rule 14    valor -> LISTA
Rule 15    valor -> INT_LITERAL
Rule 16    valor -> FLOAT_LITERAL
Rule 17    valor -> CHAR_LITERAL
Rule 18    valor -> STRING_LITERAL
Rule 19    valor -> BOOL_LITERAL
Rule 20    assignment -> VARIABLE ASIGNAR valor

Terminals, with rules where they appear

ABSTRACT             : 
ADD                  : 
AND                  : 
ARRAY_CREATION       : 
ARRAY_DECLARATION    : 
AS                   : 
ASIGNAR              : 20
BASE                 : 
BOOL                 : 
BOOL_LITERAL         : 19
BREAK                : 
BYTE                 : 
CASE                 : 
CATCH                : 
CHAR                 : 
CHAR_LITERAL         : 17
CHECKED              : 
CLASS                : 
COMA                 : 
CONST                : 
CONTINUE             : 
DCORCH               : 
DECIMAL              : 
DECREMENTO           : 
DEFAULT              : 
DELEGATE             : 
DICTIONARY           : 
DIFERENTE            : 
DIVIDIR              : 9
DIVIDIRIGUAL         : 
DLLAVE               : 
DO                   : 
DOUBLE               : 
DPAREN               : 13
DYNAMIC              : 
ELSE                 : 
ENUM                 : 
EVENT                : 
EXTERN               : 
FALSE                : 
FINALLY              : 
FIXED                : 
FLECHALAMBDA         : 
FLOAT                : 
FLOAT_LITERAL        : 12 16
FOR                  : 
FOREACH              : 
GENERICO_INVALIDO    : 
GET                  : 
GOTO                 : 
ICORCH               : 
IF                   : 
IGUAL                : 
ILLAVE               : 
IN                   : 
INCREMENTO           : 
INT                  : 
INTERFACE            : 
INTERNAL             : 
INT_LITERAL          : 11 15
IPAREN               : 13
IS                   : 
LISTA                : 14
LOCK                 : 
LONG                 : 
MAS                  : 5
MASIGUAL             : 
MAYOR                : 
MAYORIGUAL           : 
MENOR                : 
MENORIGUAL           : 
MENOS                : 6
MENOSIGUAL           : 
MODULO               : 
NAMESPACE            : 
NEW                  : 
NOT                  : 
NULL                 : 
OBJECT               : 
OPERATOR             : 
OR                   : 
OUT                  : 
OVERRIDE             : 
PARAMS               : 
PARTIAL              : 
POR                  : 8
PORIGUAL             : 
PRIVATE              : 
PROTECTED            : 
PUBLIC               : 
PUNTO                : 
READONLY             : 
REF                  : 
REMOVE               : 
RETURN               : 
SBYTE                : 
SEALED               : 
SENTENCIAFIN         : 3 4
SET                  : 
SHORT                : 
SIZEOF               : 
STACKALLOC           : 
STATIC               : 
STRING               : 
STRING_LITERAL       : 18
STRUCT               : 
SWITCH               : 
THIS                 : 
THROW                : 
TRUE                 : 
TRY                  : 
TYPEOF               : 
UINT                 : 
ULONG                : 
UNCHECKED            : 
UNSAFE               : 
USHORT               : 
USING                : 
VAR                  : 
VARIABLE             : 20
VAR_INVALIDO         : 
VIRTUAL              : 
VOID                 : 
VOLATILE             : 
WHILE                : 
YIELD                : 
error                : 

Nonterminals, with rules where they appear

assignment           : 4
cuerpo               : 2 0
expression           : 3 5 6 13
factor               : 8 9 10
linea                : 1 2
term                 : 5 6 7 8 9
valor                : 20

Parsing method: LALR

state 0

    (0) S' -> . cuerpo
    (1) cuerpo -> . linea
    (2) cuerpo -> . linea cuerpo
    (3) linea -> . expression SENTENCIAFIN
    (4) linea -> . assignment SENTENCIAFIN
    (5) expression -> . expression MAS term
    (6) expression -> . expression MENOS term
    (7) expression -> . term
    (20) assignment -> . VARIABLE ASIGNAR valor
    (8) term -> . term POR factor
    (9) term -> . term DIVIDIR factor
    (10) term -> . factor
    (11) factor -> . INT_LITERAL
    (12) factor -> . FLOAT_LITERAL
    (13) factor -> . IPAREN expression DPAREN

    VARIABLE        shift and go to state 6
    INT_LITERAL     shift and go to state 8
    FLOAT_LITERAL   shift and go to state 9
    IPAREN          shift and go to state 10

    cuerpo                         shift and go to state 1
    linea                          shift and go to state 2
    expression                     shift and go to state 3
    assignment                     shift and go to state 4
    term                           shift and go to state 5
    factor                         shift and go to state 7

state 1

    (0) S' -> cuerpo .



state 2

    (1) cuerpo -> linea .
    (2) cuerpo -> linea . cuerpo
    (1) cuerpo -> . linea
    (2) cuerpo -> . linea cuerpo
    (3) linea -> . expression SENTENCIAFIN
    (4) linea -> . assignment SENTENCIAFIN
    (5) expression -> . expression MAS term
    (6) expression -> . expression MENOS term
    (7) expression -> . term
    (20) assignment -> . VARIABLE ASIGNAR valor
    (8) term -> . term POR factor
    (9) term -> . term DIVIDIR factor
    (10) term -> . factor
    (11) factor -> . INT_LITERAL
    (12) factor -> . FLOAT_LITERAL
    (13) factor -> . IPAREN expression DPAREN

    $end            reduce using rule 1 (cuerpo -> linea .)
    VARIABLE        shift and go to state 6
    INT_LITERAL     shift and go to state 8
    FLOAT_LITERAL   shift and go to state 9
    IPAREN          shift and go to state 10

    linea                          shift and go to state 2
    cuerpo                         shift and go to state 11
    expression                     shift and go to state 3
    assignment                     shift and go to state 4
    term                           shift and go to state 5
    factor                         shift and go to state 7

state 3

    (3) linea -> expression . SENTENCIAFIN
    (5) expression -> expression . MAS term
    (6) expression -> expression . MENOS term

    SENTENCIAFIN    shift and go to state 12
    MAS             shift and go to state 13
    MENOS           shift and go to state 14


state 4

    (4) linea -> assignment . SENTENCIAFIN

    SENTENCIAFIN    shift and go to state 15


state 5

    (7) expression -> term .
    (8) term -> term . POR factor
    (9) term -> term . DIVIDIR factor

    SENTENCIAFIN    reduce using rule 7 (expression -> term .)
    MAS             reduce using rule 7 (expression -> term .)
    MENOS           reduce using rule 7 (expression -> term .)
    DPAREN          reduce using rule 7 (expression -> term .)
    POR             shift and go to state 16
    DIVIDIR         shift and go to state 17


state 6

    (20) assignment -> VARIABLE . ASIGNAR valor

    ASIGNAR         shift and go to state 18


state 7

    (10) term -> factor .

    POR             reduce using rule 10 (term -> factor .)
    DIVIDIR         reduce using rule 10 (term -> factor .)
    SENTENCIAFIN    reduce using rule 10 (term -> factor .)
    MAS             reduce using rule 10 (term -> factor .)
    MENOS           reduce using rule 10 (term -> factor .)
    DPAREN          reduce using rule 10 (term -> factor .)


state 8

    (11) factor -> INT_LITERAL .

    POR             reduce using rule 11 (factor -> INT_LITERAL .)
    DIVIDIR         reduce using rule 11 (factor -> INT_LITERAL .)
    SENTENCIAFIN    reduce using rule 11 (factor -> INT_LITERAL .)
    MAS             reduce using rule 11 (factor -> INT_LITERAL .)
    MENOS           reduce using rule 11 (factor -> INT_LITERAL .)
    DPAREN          reduce using rule 11 (factor -> INT_LITERAL .)


state 9

    (12) factor -> FLOAT_LITERAL .

    POR             reduce using rule 12 (factor -> FLOAT_LITERAL .)
    DIVIDIR         reduce using rule 12 (factor -> FLOAT_LITERAL .)
    SENTENCIAFIN    reduce using rule 12 (factor -> FLOAT_LITERAL .)
    MAS             reduce using rule 12 (factor -> FLOAT_LITERAL .)
    MENOS           reduce using rule 12 (factor -> FLOAT_LITERAL .)
    DPAREN          reduce using rule 12 (factor -> FLOAT_LITERAL .)


state 10

    (13) factor -> IPAREN . expression DPAREN
    (5) expression -> . expression MAS term
    (6) expression -> . expression MENOS term
    (7) expression -> . term
    (8) term -> . term POR factor
    (9) term -> . term DIVIDIR factor
    (10) term -> . factor
    (11) factor -> . INT_LITERAL
    (12) factor -> . FLOAT_LITERAL
    (13) factor -> . IPAREN expression DPAREN

    INT_LITERAL     shift and go to state 8
    FLOAT_LITERAL   shift and go to state 9
    IPAREN          shift and go to state 10

    expression                     shift and go to state 19
    term                           shift and go to state 5
    factor                         shift and go to state 7

state 11

    (2) cuerpo -> linea cuerpo .

    $end            reduce using rule 2 (cuerpo -> linea cuerpo .)


state 12

    (3) linea -> expression SENTENCIAFIN .

    VARIABLE        reduce using rule 3 (linea -> expression SENTENCIAFIN .)
    INT_LITERAL     reduce using rule 3 (linea -> expression SENTENCIAFIN .)
    FLOAT_LITERAL   reduce using rule 3 (linea -> expression SENTENCIAFIN .)
    IPAREN          reduce using rule 3 (linea -> expression SENTENCIAFIN .)
    $end            reduce using rule 3 (linea -> expression SENTENCIAFIN .)


state 13

    (5) expression -> expression MAS . term
    (8) term -> . term POR factor
    (9) term -> . term DIVIDIR factor
    (10) term -> . factor
    (11) factor -> . INT_LITERAL
    (12) factor -> . FLOAT_LITERAL
    (13) factor -> . IPAREN expression DPAREN

    INT_LITERAL     shift and go to state 8
    FLOAT_LITERAL   shift and go to state 9
    IPAREN          shift and go to state 10

    term                           shift and go to state 20
    factor                         shift and go to state 7

state 14

    (6) expression -> expression MENOS . term
    (8) term -> . term POR factor
    (9) term -> . term DIVIDIR factor
    (10) term -> . factor
    (11) factor -> . INT_LITERAL
    (12) factor -> . FLOAT_LITERAL
    (13) factor -> . IPAREN expression DPAREN

    INT_LITERAL     shift and go to state 8
    FLOAT_LITERAL   shift and go to state 9
    IPAREN          shift and go to state 10

    term                           shift and go to state 21
    factor                         shift and go to state 7

state 15

    (4) linea -> assignment SENTENCIAFIN .

    VARIABLE        reduce using rule 4 (linea -> assignment SENTENCIAFIN .)
    INT_LITERAL     reduce using rule 4 (linea -> assignment SENTENCIAFIN .)
    FLOAT_LITERAL   reduce using rule 4 (linea -> assignment SENTENCIAFIN .)
    IPAREN          reduce using rule 4 (linea -> assignment SENTENCIAFIN .)
    $end            reduce using rule 4 (linea -> assignment SENTENCIAFIN .)


state 16

    (8) term -> term POR . factor
    (11) factor -> . INT_LITERAL
    (12) factor -> . FLOAT_LITERAL
    (13) factor -> . IPAREN expression DPAREN

    INT_LITERAL     shift and go to state 8
    FLOAT_LITERAL   shift and go to state 9
    IPAREN          shift and go to state 10

    factor                         shift and go to state 22

state 17

    (9) term -> term DIVIDIR . factor
    (11) factor -> . INT_LITERAL
    (12) factor -> . FLOAT_LITERAL
    (13) factor -> . IPAREN expression DPAREN

    INT_LITERAL     shift and go to state 8
    FLOAT_LITERAL   shift and go to state 9
    IPAREN          shift and go to state 10

    factor                         shift and go to state 23

state 18

    (20) assignment -> VARIABLE ASIGNAR . valor
    (14) valor -> . LISTA
    (15) valor -> . INT_LITERAL
    (16) valor -> . FLOAT_LITERAL
    (17) valor -> . CHAR_LITERAL
    (18) valor -> . STRING_LITERAL
    (19) valor -> . BOOL_LITERAL

    LISTA           shift and go to state 25
    INT_LITERAL     shift and go to state 26
    FLOAT_LITERAL   shift and go to state 27
    CHAR_LITERAL    shift and go to state 28
    STRING_LITERAL  shift and go to state 29
    BOOL_LITERAL    shift and go to state 30

    valor                          shift and go to state 24

state 19

    (13) factor -> IPAREN expression . DPAREN
    (5) expression -> expression . MAS term
    (6) expression -> expression . MENOS term

    DPAREN          shift and go to state 31
    MAS             shift and go to state 13
    MENOS           shift and go to state 14


state 20

    (5) expression -> expression MAS term .
    (8) term -> term . POR factor
    (9) term -> term . DIVIDIR factor

    SENTENCIAFIN    reduce using rule 5 (expression -> expression MAS term .)
    MAS             reduce using rule 5 (expression -> expression MAS term .)
    MENOS           reduce using rule 5 (expression -> expression MAS term .)
    DPAREN          reduce using rule 5 (expression -> expression MAS term .)
    POR             shift and go to state 16
    DIVIDIR         shift and go to state 17


state 21

    (6) expression -> expression MENOS term .
    (8) term -> term . POR factor
    (9) term -> term . DIVIDIR factor

    SENTENCIAFIN    reduce using rule 6 (expression -> expression MENOS term .)
    MAS             reduce using rule 6 (expression -> expression MENOS term .)
    MENOS           reduce using rule 6 (expression -> expression MENOS term .)
    DPAREN          reduce using rule 6 (expression -> expression MENOS term .)
    POR             shift and go to state 16
    DIVIDIR         shift and go to state 17


state 22

    (8) term -> term POR factor .

    POR             reduce using rule 8 (term -> term POR factor .)
    DIVIDIR         reduce using rule 8 (term -> term POR factor .)
    SENTENCIAFIN    reduce using rule 8 (term -> term POR factor .)
    MAS             reduce using rule 8 (term -> term POR factor .)
    MENOS           reduce using rule 8 (term -> term POR factor .)
    DPAREN          reduce using rule 8 (term -> term POR factor .)


state 23

    (9) term -> term DIVIDIR factor .

    POR             reduce using rule 9 (term -> term DIVIDIR factor .)
    DIVIDIR         reduce using rule 9 (term -> term DIVIDIR factor .)
    SENTENCIAFIN    reduce using rule 9 (term -> term DIVIDIR factor .)
    MAS             reduce using rule 9 (term -> term DIVIDIR factor .)
    MENOS           reduce using rule 9 (term -> term DIVIDIR factor .)
    DPAREN          reduce using rule 9 (term -> term DIVIDIR factor .)


state 24

    (20) assignment -> VARIABLE ASIGNAR valor .

    SENTENCIAFIN    reduce using rule 20 (assignment -> VARIABLE ASIGNAR valor .)


state 25

    (14) valor -> LISTA .

    SENTENCIAFIN    reduce using rule 14 (valor -> LISTA .)


state 26

    (15) valor -> INT_LITERAL .

    SENTENCIAFIN    reduce using rule 15 (valor -> INT_LITERAL .)


state 27

    (16) valor -> FLOAT_LITERAL .

    SENTENCIAFIN    reduce using rule 16 (valor -> FLOAT_LITERAL .)


state 28

    (17) valor -> CHAR_LITERAL .

    SENTENCIAFIN    reduce using rule 17 (valor -> CHAR_LITERAL .)


state 29

    (18) valor -> STRING_LITERAL .

    SENTENCIAFIN    reduce using rule 18 (valor -> STRING_LITERAL .)


state 30

    (19) valor -> BOOL_LITERAL .

    SENTENCIAFIN    reduce using rule 19 (valor -> BOOL_LITERAL .)


state 31

    (13) factor -> IPAREN expression DPAREN .

    POR             reduce using rule 13 (factor -> IPAREN expression DPAREN .)
    DIVIDIR         reduce using rule 13 (factor -> IPAREN expression DPAREN .)
    SENTENCIAFIN    reduce using rule 13 (factor -> IPAREN expression DPAREN .)
    MAS             reduce using rule 13 (factor -> IPAREN expression DPAREN .)
    MENOS           reduce using rule 13 (factor -> IPAREN expression DPAREN .)
    DPAREN          reduce using rule 13 (factor -> IPAREN expression DPAREN .)

